# timeverse-plugin-search

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/timeverse_plugin_search/: __init__.py  config.py  parsers.py  searcher.py  server.py
tests/: __init__.py  test_server.py
