[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timeverse-plugin-search"
version = "0.1.0"
description = "从多个来源搜索可安装的技能包和 MCP 服务器，提供分层降级搜索策略"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "TimeVerse Studio" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "timeverse",
    "skill-search",
    "plugin-search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "duckduckgo_search>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
timeverse-plugin-search = "timeverse_plugin_search.server:main"

[project.urls]
Homepage = "https://github.com/timeverse-studio/timeverse-plugin-search"
Issues = "https://github.com/timeverse-studio/timeverse-plugin-search/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/timeverse_plugin_search"]

[tool.hatch.build.targets.sdist]
include = [
    "src/timeverse_plugin_search",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disable_error_code = ["untyped-decorator", "no-untyped-def"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
